--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -1,180 +1,184 @@
 :root{
-    --main-color: #DD2F6E;
-    --color-dark: #1D2231;
-    --text-grey: #8390A2;
-  }
-  
-  
-  *{
-    padding: 0;
-    margin:0;
-    box-sizing: border-box;
-    list-style-type: none;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
-  .sidebar{
-    width: 345px;
-    position: fixed;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    left: 0;
-    top: 0;
-    height: 100%;
-    background-color: #00a2ff;
-    z-index: 100;
-  }
-  
-  .kamjobs{
-    width: fit-content;
-    padding: 0px 12px ;
-    cursor: pointer;
-    text-align: center;
-  }
-  .kamjobs:hover{
-    width: fit-content;
-    cursor: pointer;
-    transform: scale(1.08);
-    text-align: center;
-  }
-  .sidebar-brand {
-    height: 90px;
-    padding: 1rem 0rem 1rem 2rem;
-    color: #fff;
-  }
-  
-  .sidebar-brand span{
-    display: inline-block;
-    padding-right: 1rem;
-  }
-  
-  .sidebar-menu li{
-    width: 100%;
-    margin-bottom: 1.7rem;
-    padding-left: 2rem;
-  }
-  .sidebar-menu a {
-    display: block;
-    color: white;
-    font-size: 1.1rem;
-    padding-left: 1rem;
-  }
-  
-  .sidebar-menu a span:first-child{
-    font-size: 1.5rem;
-    padding-right: 1rem;
-  }
-  
-  .sidebar-menu a.active {
-    background: white;
-    padding-top: 1rem ;
-    padding-bottom: 1rem;
-    color: #00a2ff;
-    border-radius: 30px 0px 0px 30px;
-  }
-  
-  header{
-    display: flex;
-    justify-content: space-between;
-    border-radius: 0px 20px;
-    padding: 1rem 1.5rem;
-    box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
-    background-color: #00a2ff;
-    color: white;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 100;
-  }
-  
-  .search-wrapper{
-    border: 1px solid #ccc;
-    border-radius: 30px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    overflow-x: hidden;
-  }
-  
-  .search-wrapper input {
-   height: 100%;
-    padding: .5rem;
-    border: none;
-    outline: none;
-  }
-  
-  .search-wrapper span {
-    display: inline-block;
-    padding: 0rem 1rem;
-    font-size: 1.5rem;
-  }
-  
-  .user-wrapper {
-    display: flex;
-    align-items: center;
-  }
-  
-  .user-wrapper img {
-    border-radius: 50%;
-    margin-right: 1rem;
-  }
-  
-  .user-wrapper small {
-    display: inline-block;
-    color: #d3d7db;
-  }
-  
-  /*.user-wrapper h4 {*/
-    /*margin-bottom: 0rem !important;*/
-  /*}*/
-  
-  .sidebar-menu {
-    margin-top: 1rem;
-  }
-  
-  header h2 {
-    color: #222;
-  }
-  header label span {
-    font-size: 1.7rem;
-    padding-right: 1rem;
-  }
-  
-  main {
-    background-image:url("../../assets/apps.46003.14259451864568504.ad5e5d07-0fbb-46ed-b9b6-a1b781645691.jpg");
-    border-radius: 20px;
-    margin-top: 100px;
-    padding: 2rem 1.5rem;
-    min-height: 75vh;
-  }
-  
-  .cards {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 2rem;
-    margin-top: 1rem;
-  }
-  
-  .card-single {
-    display: flex;
-    justify-content: space-between;
-    background: white;
-    padding: 2rem;
-    border-radius: 20px;
-  }
-  
+  --main-color: #DD2F6E;
+  --color-dark: #1D2231;
+  --text-grey: #8390A2;
+}
 
+
+*{
+  padding: 0;
+  margin:0;
+  box-sizing: border-box;
+  list-style-type: none;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.sidebar{
+  width: 345px;
+  position: fixed;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background-color: rgb(13, 138, 255);
+  z-index: 100;
+}
+
+.kamjobs{
+  color: white;
+  width: fit-content;
+  padding: 0px 12px ;
+  cursor: pointer;
+  text-align: center;
+}
+.kamjobs:hover{
+  width: fit-content;
+  cursor: pointer;
+  transform: scale(1.08);
+  text-align: center;
+}
+.sidebar-brand {
+  height: 90px;
+  padding: 1rem 0rem 1rem 2rem;
+  color: #ffffff;
+}
+
+.sidebar-brand span{
+  display: inline-block;
+  padding-right: 1rem;
+}
+
+.sidebar-menu li{
+  width: 100%;
+  margin-bottom: 1.7rem;
+  padding-left: 2rem;
+}
+.sidebar-menu a {
+  display: block;
+  color: white;
+  font-size: 1.1rem;
+  padding-left: 1rem;
+}
+
+.sidebar-menu a span:first-child{
+  font-size: 1.5rem;
+  padding-right: 1rem;
+}
+
+.sidebar-menu a.active {
+  background: white;
+  padding-top: 1rem ;
+  padding-bottom: 1rem;
+  color: rgb(13, 138, 255);
+  border-radius: 30px 0px 0px 30px;
+}
+
+header{
+  display: flex;
+  justify-content: space-between;
+  border-radius: 40px 0px 0px 40px ;
+  margin: 5px 0px;
+  padding: 10px 1.5rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: rgb(13, 138, 255);
+  color: white;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 100;
+}
+
+.user-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.user-wrapper img {
+  border-radius: 50%;
+  margin: 2px 10px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.user-wrapper small {
+  display: inline-block;
+  color: #d3d7db;
+}
+
+.sidebar-menu {
+  margin-top: 1rem;
+}
+
+header h2 {
+  color: #222;
+}
+header label span {
+  font-size: 1.7rem;
+  padding-right: 1rem;
+}
+
+main {
+  /*background-image:url("../../../../assets/apps.46003.14259451864568504.ad5e5d07-0fbb-46ed-b9b6-a1b781645691.jpg");
+  */
+  border-radius: 20px;
+  margin-top: 100px;
+  padding: 2rem 1.5rem;
+  min-height: 85vh;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2rem;
+  margin-top: 1rem;
+}
+
+.card-single {
+  display: flex;
+  justify-content: space-between;
+  background: white;
+  padding: 2rem;
+  border-radius: 20px;
+}
+
+
+
+.p-justify-between {
+  display: flex;
+  justify-content:space-between;
+}
+
+.p-justify-right {
+  display: flex;
+  justify-content:flex-end;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content:space-around;
+}
+.button-white{
+  margin: 3px;
+  color: white;
+}
+
+.sign-out{
+  padding: 8px 16px;
+  width: 100%;
+  border-radius: 25px;
+}
+
+:host ::ng-deep .p-overlaypanel {
+  border-radius: 25px;
+}
+
+:host ::ng-deep .p-overlaypanel:after,:host ::ng-deep .p-overlaypanel:before{
+  display: none;
+}
+
+
+.pi-ellipsis-h{
   
-  .p-justify-between {
-    display: flex;
-    justify-content:space-between;
-  }
-  
-  .p-justify-right {
-    display: flex;
-    justify-content:flex-end;
-  }
-  .button-white{
-    margin: 3px;
-    color: white;
-  }
+  cursor: pointer;
+}
