--- a/src/app/pages/blog-form/blog-form.component.css
+++ b/src/app/pages/blog-form/blog-form.component.css
@@ -15,37 +15,6 @@
 *::before, *::after {
   box-sizing: border-box;
 }
-/*html, body {*/
-/*width: 100%;*/
-/*height:100%;*/
-/*}*/
-
-/*body {*/
-/*background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);*/
-/*background-size: 400% 400%;*/
-/*animation: gradient 15s ease infinite;*/
-/*}*/
-
-
-
-/*.all{*/
-/*width: 100%;*/
-/*height:100%;*/
-/*background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);*/
-/*background-size: 400% 400%;*/
-/*animation: gradient 15s ease infinite;*/
-/*}*/
-/*@keyframes gradient {*/
-/*0% {*/
-/*background-position: 0% 50%;*/
-/*}*/
-/*50% {*/
-/*background-position: 100% 50%;*/
-/*}*/
-/*100% {*/
-/*background-position: 0% 50%;*/
-/*}*/
-/*}*/
 
 .flex-container {
   width: 80vvw;
@@ -60,9 +29,6 @@
   padding: 2rem;
   border-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-.p-button-raised{
-  margin: 5px;
 }
 
 .input {
@@ -123,7 +89,55 @@
     transform: scale(0, 0);}
   100% {opacity:1;
     transform: scale(1, 1);}
+}
+
+/*Loader*/
+:host ::ng-deep .custom-spinner .p-progress-spinner-circle {
   
+  animation: custom-progress-spinner-dash 1.5s ease-in-out infinite, custom-progress-spinner-color 6s ease-in-out infinite;
+}
+
+@keyframes custom-progress-spinner-color {
+  100%,
+  0% {
+      stroke: #16697A;
+  }
+  40% {
+      stroke: #489FB5;
+  }
+  66% {
+      stroke: #82C0CC;
+  }
+  80%,
+  90% {
+      stroke: #FFA62B;
+  }
+}
+
+@keyframes custom-progress-spinner-dash {
+  0% {
+      stroke-dasharray: 1, 200;
+      stroke-dashoffset: 0;
+  }
+  50% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -35px;
+  }
+  100% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -124px;
+  }
+}
+.p-button-rounded:disabled {
+  border: 0px;
+  color: gray;
+  background-color: white;
+  box-shadow: none;
+}
+.spinner{
+  display:flex;
+  justify-content:space-around;
+  margin: 10px auto;
 }
 
 .p-justify-right {
@@ -141,5 +155,9 @@ label{
   padding: 5px 10px;
 }
 
-
-
+.p-button-rounded:disabled {
+  border: 0px;
+  color: gray;
+  background-color: white;
+  box-shadow: none;
+}
