--- a/src/app/pages/candidat/home-candidat/home-candidat.component.css
+++ b/src/app/pages/candidat/home-candidat/home-candidat.component.css
@@ -1,78 +1,358 @@
-body{
-  margin-top: 90px;
+.p-field-checkbox label {
+  margin-left: 3px;
 }
+
+* {
+  white-space: pre-wrap
+}
+
+
+div {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/*.overflow{
+  display:inline-block;
+  width:80%;
+  white-space: nowrap;
+  overflow:hidden !important;
+  text-overflow: ellipsis;
+}*/
+
+
+
+.main {
+  /*  background-image: url("../../../assets/Hiring-Manager-Reviewing-Resume-During-Job-Interview.jpg");  */
+
+  background-size: cover;
+  margin: 0px auto;
+  margin-top: 30px;
+  width: 58vw;
+  border-radius: 20px;
+
+}
+
+.flex-cont {
+  display: flex;
+  margin: 0.5vw auto;
+  padding: 20px 0vw;
+  border-radius: 30px;
+  flex-flow: column;
+}
+
+@media (max-width: 1236px) {
+  .flex-cont {
+    padding: 0vw;
+  }
+}
+
+.bottom {
+  padding-bottom: 20px;
+}
+
+.card-single {
+  background: rgba(255, 255, 255, 0.8);
+  color: rgb(0, 90, 192);
+  backdrop-filter: blur(30px);
+  height: fit-content;
+  padding: 20px 20px 10px 20px;
+  margin: 1vh auto;
+  width: 98%;
+  border-radius: 30px;
+  animation: reveal ease-in 0.2s;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+@keyframes reveal {
+
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.p-fluid label {
+  padding: 5px 10px;
+}
+
+
+.paging-control {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+
+  border-radius: 30px;
+  flex-flow: column;
+  background: rgba(255, 255, 255, 0.801);
+  backdrop-filter: blur(10px);
+  height: fit-content;
+  width: fit-content;
+  border-radius: 40px;
+}
+.paging-control /deep/ .ngx-pagination .current {
+  border-radius: 20px;
+}
+.paging-control /deep/ .ngx-pagination {
+  border-radius: 20px;
+  margin: 0px 4px;
+  padding: 0px;
+  height: fit-content;
+}
+.paging-control /deep/ .ngx-pagination .ng-star-inserted,
+.ngx-pagination .pagination-next,
+.ngx-pagination li {
+  border-radius: 20px;
+  margin: 0px 2px;
+}
+.paging-control /deep/ .ngx-pagination li {
+  border-radius: 20px;
+  margin: 0px 2px;
+}
+
+
 /* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    backdrop-filter: blur(20px);
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 20vh; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    animation: fadeInModal 0.3s;
+.offre-modal {
+  backdrop-filter: blur(20px);
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 10;
+  /* Sit on top */
+  padding-top: 80px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+  animation: fadeInModal 0.3s;
+}
+
+@keyframes fadeInModal {
+  0% {
+    opacity: 0;
   }
-  
-  
-  
-  /* Modal Content */
-  .modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 10px;
-    border-radius: 20px;
-    width: 50vw;
-    animation: fadeIn 0.3s;
+
+  100% {
+    opacity: 1;
   }
-  
-  
-  @media (max-width:800px) {
-    
-    .test-modal-content {
-      
-      width: 75vw;
-    }
+}
+
+/* Modal Content */
+.offre-modal-content {
+  background-color: #fefefe;
+  margin: 0px auto;
+  padding: 10px;
+  border-radius: 20px;
+  width: 90vw;
+  height: 100%;
+  animation: fadeIn 0.3s;
+}
+
+@media (max-width:800px) {
+
+  .offre-modal-content {
+
+    width: 97vw;
   }
+}
+
+@media (max-width:600px) {
+
+  .offre-modal-content {
+
+    width: 98vw;
+  }
+}
+
+@media (max-width:500px) {
+
+  .offre-modal-content {
+
+    width: 99vw;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scale(1, 1);
+  }
+
+}
+
+.p-justify-right {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.p-justify-between {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.p-button-rounded {
+  padding: 0px 16px;
+  margin: 4px;
+}
+
+.p-button-rounded:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.button-white {
+  margin: 10px;
+  background-color: rgba(255, 255, 255, 0.719);
+  backdrop-filter: blur(80px);
+}
+
+/* for entreprise image*/
+.column {
+
+  display: flex;
+  flex-direction: column;
+}
+
+.right img {
+  margin-left: 20px;
+  border-radius: 15px;
+  height: 60px;
+}
+
+.details p {
+  margin: 10px;
+}
+
+.details {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: fit-content;
+}
+
+/* NG PRIME STYLING*/
+:host ::ng-deep .p-component {
+  border-radius: 20px;
+}
+
+:host ::ng-deep .p-dropdown,
+.p-dropdown-items-wrapper,
+.p-multiselect-chip,
+.p-multiselect,
+.p-multiselect-open,
+.p-dropdown-items {
+  border-radius: 25px;
+  min-width: 12vw;
+}
+
+:host ::ng-deep p-multiselect .p-multiselect-chip,
+.p-multiselect,
+.p-multiselect-open,
+.ng-tns-c75-6,
+.p-dropdown-items {
+  border-radius: 25px;
+  max-width: 96%;
+  margin: 6px;
+  min-width: 12vw;
+}
+
+:host ::ng-deep .p-multiselect-label .ng-star-inserted {
+  border-radius: 25px;
+}
+
+:host ::ng-deep .p-chips-multiple-container {
+  margin: 6px;
+  border-radius: 25px;
+  min-width: 27vw;
+  width: 100%;
+}
+
+:host ::ng-deep .p-chips-multiple-container .p-chips-token {
+  margin: 1px;
+  border-radius: 25px;
+}
+
+.mots-cles :host ::ng-deep .p-chips-multiple-container {
+  margin: 6px;
+  border-radius: 25px;
+  width: 100vw;
+}
+
+:host ::ng-deep .p-dropdown,
+:host ::ng-deep .p-component {
+  border-radius: 25px;
+}
+
+:host ::ng-deep p-multiselect .p-multiselect-chip,
+:host ::ng-deep p-multiselect .p-multiselect-item {
+  border-radius: 25px;
+}
+
+:host ::ng-deep p-multiselect .p-multiselect-items-wrapper {
+  border-radius: 0px 0px 20px 20px;
+}
+
+:host ::ng-deep p-multiselect .p-multiselect-header {
+  border-radius: 20px 20px 0px 0px;
+}
+
+/*  Loader  */
+:host ::ng-deep .custom-spinner .p-progress-spinner-circle {
   
-  @media (max-width:600px) {
-    
-    .test-modal-content {
-      
-      width: 85vw;
-    }
+  animation: custom-progress-spinner-dash 1.5s ease-in-out infinite, custom-progress-spinner-color 6s ease-in-out infinite;
+}
+
+@keyframes custom-progress-spinner-color {
+  100%,
+  0% {
+      stroke: #3c91ff;
   }
-  
-  @media (max-width:500px) {
-    
-    .test-modal-content {
-      
-      width: 90vw;
-    }
+  40% {
+      stroke: #b9b9b9;
   }
-  
-  @keyframes fadeInModal {
-    0% {opacity:0;}
-    100% {opacity:1;}
+  66% {
+      stroke: #02bee4;
   }
-  
-  @keyframes fadeIn {
-    0% {opacity:0;
-      transform: scale(0, 0);}
-    100% {opacity:1;
-      transform: scale(1, 1);}
-    
+  80%,
+  90% {
+      stroke: #3c91ff;
   }
-  
-  .p-justify-right {
-    display: flex;
-    justify-content:flex-end;
+}
+
+@keyframes custom-progress-spinner-dash {
+  0% {
+      stroke-dasharray: 1, 200;
+      stroke-dashoffset: 0;
   }
-  .p-justify-between {
-    display: flex;
-    justify-content:space-between;
+  50% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -35px;
   }
+  100% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -124px;
+  }
+}
+
+.spinner{
+  display:flex;
+  justify-content:space-around;
+  animation: reveal ease-in 0.2s;
+  margin: 10px auto;
+}
