--- a/src/app/pages/candidat/home-candidat/home-candidat.component.html
+++ b/src/app/pages/candidat/home-candidat/home-candidat.component.html
@@ -1,23 +1,81 @@
 <body>
-  <div  *ngIf="!candidat.cv , else modify">
-    <button (click)="ajoutCV()">ajouter CV</button>
-</div>
-<ng-template #modify>
-        <button (click)="router.navigate(['gestion-cv/personal',candidat.cv.id])">Modifier CV</button>
-</ng-template>
 
-<button (click)="openTestDialog(1)">Faire un test</button>
-
-<div id="testModal" class="modal">
-    <div class="modal-content">
+  <div id="offreModal" class="offre-modal">
+    <div class="offre-modal-content">
       <div class="p-justify-right">
         <button pButton pRipple type="button" (click)="cancel()" icon="pi pi-times"
           class="p-button-danger p-button-rounded p-button-text "></button>
       </div>
-        <div *ngIf="clicked">
-          <app-quizz></app-quizz>
-        </div>
-        
+      <p-scrollPanel [style]="{width: '100%', height: '90%'}">
+        <app-offre *ngIf="clicked" [offre]="currentOffre"></app-offre>
+        <p-scrollTop target="parent" [threshold]="100" icon="pi pi-arrow-up"></p-scrollTop>
+      </p-scrollPanel>
     </div>
-</div>
+  </div>
+  
+    <div class="main" *ngIf="offres.length>0">
+      <div class="flex-cont ">
+        <div class="card-single" *ngFor="let offre of offres  | paginate: { itemsPerPage: 6, currentPage: page }">
+          <div>
+            <div class="p-justify-between ">
+              <div>
+                <h2 style="text-align: left;">{{offre.nom_emploi}}</h2>
+                <span class="overflow" [innerHTML]="(offre.description_emploi | slice:0:150)+'...'">
+                </span>
+              </div>
+              
+              <div class="p-justify-right column">
+                <div class="right">
+                  <div *ngIf="offre.employeur.logo==null, else logo">
+                    <img src="../../../assets/firm.png" alt="">
+                  </div>
+                  <ng-template #logo>
+                    <img src="{{offre.employeur.logo}}" alt="">
+                  </ng-template>
+                </div>
+                <div class="p-justify-right">
+                  <h3 style="text-transform: uppercase;">{{offre.employeur.nom_entreprise }}</h3>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+          <div class="details">
+  
+            <p><strong>Types d'emploi: </strong>
+              <span *ngFor="let type of offre.emploi_types">
+                <span>{{type.emploi_type}} </span>
+              </span>
+            </p>
+            <p><strong>Domaine: </strong>
+              <span>
+                {{offre.domaine |titlecase}}
+              </span>
+            </p>
+  
+          </div>
+          <div class="p-justify-between">
+            <div class="details">
+              <p><strong> Adresse: </strong>{{offre.employeur.adresse.pays | uppercase}},
+                {{offre.employeur.adresse.governat |titlecase}}, {{offre.employeur.adresse.ville |lowercase}}</p>
+            </div>
+  
+            <button pButton pRipple type="button" (click)="showDialog(offre)" label="Voir détails" icon="pi pi-eye"
+              class="p-button-rounded"></button>
+          </div>
+        </div>
+      </div>
+      <div class="flex-cont ">
+        <pagination-controls (pageChange)="page = $event" class="paging-control" maxSize="3" previousLabel="Précédent"
+          nextLabel="Suivant" autoHide="true"></pagination-controls>
+      </div>
+    </div>
+
+    <div class="spinner" *ngIf="!loaded" style="margin-top: 30vh">
+      <div id="loader" >
+        <p-progressSpinner [style]="{width: '80px', height: '80px'}" styleClass="custom-spinner" strokeWidth="4"
+          fill="#EEEEEE" animationDuration=".5s"></p-progressSpinner>
+      </div>
+    </div>
+  
 </body>
