--- a/src/app/pages/employeur/candidatures/candidatures.component.html
+++ b/src/app/pages/employeur/candidatures/candidatures.component.html
@@ -1,11 +1,10 @@
 <!-- CADIDATURE MODAL -->
-<div id="candidatureModal" class="CVmodal">
-  <div class="CVmodal-content">
+<div id="candidatureModal" class="CandidatureModal">
+  <div class="CandidatureModal-content">
     <div class="p-justify-right">
       <button pButton pRipple type="button" (click)="CandidatureCancel()" icon="pi pi-times"
         class="p-button-danger p-button-rounded p-button-text "></button>
     </div>
-    <p-scrollPanel [style]="{width: '100%', height: '70vh'}">
       <div class="description-card">
         <div class="description-title">
           Lettre de motivation : </div>
@@ -14,12 +13,11 @@
       </div>
       <div class="description-card no-border">
         <div class="description-title">
-          CV : </div>
+          CV : 
+        </div>
+          <a class="cv" href={{displayed_candidature.cv}}>Voir Cv</a>
+          
       </div>
-      <p-scrollPanel [style]="{width: '100%', height: '70vh'}">
-        <pdf-viewer [src]=" displayed_candidature.cv " [render-text]="true" style="display: block;"></pdf-viewer>
-      </p-scrollPanel>
-    </p-scrollPanel>
   </div>
 </div>
 
