--- a/src/app/pages/employeur/candidatures/candidatures.component.scss
+++ b/src/app/pages/employeur/candidatures/candidatures.component.scss
@@ -23,6 +23,9 @@
 
 
 .board {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 10px;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -52,6 +55,7 @@
 
 
   .board-wrapper {
+    
     display: flex;
 
     flex-grow: 1;
@@ -59,16 +63,18 @@
     border-radius: 20px;
 
     .board-columns {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  
       display: flex;
       flex-grow: 1;
 
       .board-column {
-
+        
         display: flex;
         flex-direction: column;
         flex-grow: 1;
         flex-basis: 0; // to force the columns to all be the same size, regardless of content
-
+        
         min-height: 200px;
         margin: 30px 12px 0px 12px;
         padding-top: 25px;
@@ -76,7 +82,7 @@
 
         border-radius: 20px;
 
-        background: rgba(white, 0.5);
+        background: rgba(rgb(178, 210, 247), 0.5);
         backdrop-filter: blur(80px);
 
         .column-title {
@@ -238,9 +244,50 @@
   margin: auto;
   padding: 10px;
   border-radius: 20px;
-  width: 60%;
+  width: 63%;
   animation: fadeIn 0.3s;
+}
 
+/* The Modal (background) */
+.CandidatureModal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  backdrop-filter: blur(10px);
+  z-index: 100;
+  /* Sit on top */
+  padding-top: 35vh;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+  animation: fadeInModal 0.3s;
+}
+
+/* Modal Content */
+.CandidatureModal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 10px;
+  border-radius: 20px;
+  width: 50%;
+  height: 30vh;
+  animation: fadeIn 0.3s;
+}
+
+.cv{
+  text-decoration: none;
+  margin-left: 30px;
 }
 
 /* The Modal (background) */
@@ -252,7 +299,7 @@
   backdrop-filter: blur(10px);
   z-index: 100;
   /* Sit on top */
-  padding-top: 20vh;
+  padding-top: 30vh;
   /* Location of the box */
   left: 0;
   top: 0;
