--- a/src/app/pages/formsociete/formsociete.component.html
+++ b/src/app/pages/formsociete/formsociete.component.html
@@ -1,6 +1,238 @@
 <p-toast></p-toast>
 
 <div class="all">
+
+  <div class="cont">
+    <form class="form sign-in">
+      <h2>Bienvenue à nouveau</h2>
+      <label>
+        <span>Email</span>
+        <input id="login_email" type="login_email" width="50px" [(ngModel)]="employeur.email" name="login_email"
+          #login_email="ngModel" required email [ngClass]="{'ng-dirty': login_email.dirty && login_email.invalid}">
+        <div>
+          <small class="p-error" *ngIf="(login_email.dirty && login_email.invalid)">Taper un email valable.</small>
+        </div>
+        <div [hidden]="!login_email.errors?.required || login_email.pristine">
+          <small class="p-error">l'email est requis.</small>
+        </div>
+      </label>
+      <label>
+        <span>Mot De Passe</span>
+        <input type="password" id="login_mdp" pInputText [(ngModel)]="employeur.mot_de_passe" name="login_mdp"
+          #login_mdp="ngModel" minlength="6" required [ngClass]="{'ng-dirty': login_mdp.dirty && login_mdp.invalid}" />
+        <div>
+          <small class="p-error" *ngIf="(login_mdp.dirty && login_mdp.invalid)">6 caractéres au minimum.</small>
+        </div>
+        <div [hidden]="!login_mdp.errors?.required || login_mdp.pristine">
+          <small class="p-error">mot de passe est requis.</small>
+        </div>
+      </label>
+      <p class="forgot-pass">Forgot password?</p>
+      <button id="login_btn" type="button" (click)="logIn()" pButton class="submit  p-button-rounded p-button-text"
+        [disabled]="login_email.invalid || login_mdp.invalid">Connecter</button>
+
+      <div class="spinner" style="margin-top: 40px">
+        <div id="login_loader" style="display: none;">
+          <p-progressSpinner [style]="{width: '50px', height: '50px'}" styleClass="custom-spinner" strokeWidth="8"
+            fill="#EEEEEE" animationDuration=".5s"></p-progressSpinner>
+        </div>
+      </div>
+    </form>
+    <div class="sub-cont">
+      <div class="img">
+        <div class="img__text m--up">
+          <h2>Nouveau ici?</h2>
+          <p>Inscrivez-vous et découvrez un grand nombre de nouvelles opportunités! </p>
+        </div>
+        <div class="img__text m--in">
+          <h2>Un d'entre nous?</h2>
+          <p>Si vous avez déjà un compte, connectez-vous simplement. Vous nous avez manqué ! </p>
+        </div>
+        <div class="img__btn" (click)="toggle()">
+          <span class="m--up">S'inscrire</span>
+          <span class="m--in">Connecter</span>
+        </div>
+      </div>
+
+      <form class="form sign-up">
+        <p-scrollPanel id="form" [style]="{width: '100%', height: '100%'}">
+          <h2>Il est temps de se sentir comme à la maison</h2>
+          <label>
+            <span>Nom du responsable</span>
+            <input id="nom" type="text" pInputText [(ngModel)]="employeur.nom" name="nom" #nom="ngModel" required>
+            <div>
+              <small class="p-error" *ngIf="nom.dirty && nom.errors?.required">le nom du responsable est requis.</small>
+            </div>
+          </label>
+
+          <label>
+            <span>Nom de la Société</span>
+            <input id="nom_ste" type="text" pInputText [(ngModel)]="employeur.nom_entreprise" name="nom_ste"
+              #nom_ste="ngModel" required>
+            <div>
+              <small class="p-error" *ngIf="nom_ste.dirty && nom_ste.errors?.required">le nom de la Société est
+                requis.</small>
+            </div>
+          </label>
+
+          <label>
+            <span>Email</span>
+            <input id="email" type="email" pInputText width="50px" [(ngModel)]="employeur.email" name="email"
+              #email="ngModel" required email [ngClass]="{'ng-dirty': email.dirty && email.invalid}">
+            <div>
+              <small class="p-error" *ngIf="(email.dirty && email.invalid)">Taper un email valable.</small>
+            </div>
+            <div>
+              <small class="p-error" *ngIf="email.dirty && email.errors?.required">l'email est requis.</small>
+            </div>
+          </label>
+
+          <label>
+            <span>Logo de la société</span>
+            <div class="button-wrapper">
+              <span class="label">
+                Telecharger logo
+              </span>
+              <input type="file" name="upload" id="upload" accept=".jpg,.png,.jpeg" class="upload-box"
+                placeholder="Telecharger logo" (change)="handleFileInput($event.target.files)">
+            </div>
+            <div style="display: flex; justify-content:space-around">
+              <img id="logo" [src]="employeur.logo" style="border-radius: 15px; margin: 8px;" height="100px">
+            </div>
+            <div id="compression" style="display: none;">
+              <div class="spinner">
+                <p-progressSpinner [style]="{width: '50px', height: '50px'}" styleClass="custom-spinner" strokeWidth="8"
+                  fill="#EEEEEE" animationDuration=".5s"></p-progressSpinner>
+              </div>
+              <div class="spinner">
+                <p>Compression en cours</p>
+              </div>
+            </div>
+          </label>
+
+          <label>
+            <span>site web</span>
+            <input id="site" type="text" rows="1" pInputText [(ngModel)]="employeur.site_web" name="site"
+              #site="ngModel">
+          </label>
+
+          <label>
+            <span>Matricule fiscale</span>
+            <input id="code" type="text" pInputText aria-describedby="username-help" [(ngModel)]="employeur.matricule"
+              name="code" #code="ngModel" required>
+            <div>
+              <small class="p-error" *ngIf="code.dirty && code.errors?.required">la matricule fiscale est
+                requis.</small>
+            </div>
+          </label>
+
+          <label>
+            <span>Telephone</span>
+            <input class="input" #telephone="ngModel" id="telephone" name="telephone" type="number" required pInputText
+              [(ngModel)]="employeur.telephone" pattern="[0-9]{8}$"
+              [ngClass]="{'ng-dirty': telephone.dirty && telephone.invalid}">
+            <div>
+              <small class="p-error" *ngIf="(telephone.dirty && telephone.invalid)">Telephone doit être 8
+                chiffres.</small>
+            </div>
+            <div [hidden]="!telephone.errors?.required || telephone.pristine">
+              <small class="p-error">Telephone est requis.</small>
+            </div>
+          </label>
+
+          <label>
+            <span>Description de la Société</span>
+            <textarea id="desc" [rows]="3" [cols]="30" pInputTextarea autoResize="autoResize"
+              [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel"></textarea>
+          </label>
+
+          <label>
+            <p-dropdown [options]="secteurs" [(ngModel)]="secteur" placeholder="Choisissez un secteur d'activités"
+              name="secteur_act" #secteur_act="ngModel" optionLabel="secteur" required
+              [ngClass]="{'ng-dirty': email.dirty && email.invalid}">
+            </p-dropdown>
+            <div>
+              <small class="p-error" *ngIf="secteur_act.dirty && secteur_act.errors?.required">Le secteur d'activité est
+                requis.</small>
+            </div>
+          </label>
+
+          <label>
+            <span>Mot De Passe</span>
+            <input type="password" id="mdp" pInputText [(ngModel)]="employeur.mot_de_passe" name="mdp" #mdp="ngModel"
+              minlength="6" required [ngClass]="{'ng-dirty': mdp.dirty && mdp.invalid}" />
+            <div>
+              <small class="p-error" *ngIf="(mdp.dirty && mdp.invalid)">Le mot de passe doit être 6 caractéres au
+                minimum.</small>
+            </div>
+            <div [hidden]="!mdp.errors?.required || mdp.pristine">
+              <small class="p-error">mot de passe est requis.</small>
+            </div>
+          </label>
+
+          <label>
+            <span>Confirmation Mot De Passe</span>
+            <input type="password" id="confirm_mdp" pInputText [(ngModel)]="employeur.mot_de_passe_confirmation"
+              pattern="{{employeur.mot_de_passe}}" name="confirm_mdp" #confirm_mdp="ngModel" required />
+            <div>
+              <small class="p-error" *ngIf="(confirm_mdp.dirty && confirm_mdp.errors?.required) && mdp.valid">la
+                confirmation du mot de passe est requis.</small>
+            </div>
+            <div>
+              <small class="p-error" *ngIf="(confirm_mdp.dirty && confirm_mdp.invalid) && mdp.valid">la confirmation
+                doit être identique au mot de passe.</small>
+            </div>
+          </label>
+
+          <label>
+            <span>Pays</span>
+            <input id="pays" type="text" rows="1" pInputText [(ngModel)]="employeur.adresse.pays" name="pays"
+              #pays="ngModel" required>
+          </label>
+
+          <label>
+            <span>Governat</span>
+            <input id="governat" type="text" pInputText [(ngModel)]="employeur.adresse.governat" name="governat"
+              #governat="ngModel" required>
+          </label>
+
+          <label>
+            <span>Ville</span>
+            <input id="ville" type="text" rows="1" pInputText [(ngModel)]="employeur.adresse.ville" name="ville"
+              #ville="ngModel" required>
+          </label>
+
+          <label>
+            <span>Adresse</span>
+            <input id="adresse" type="text" pInputText [(ngModel)]="employeur.adresse.adresse" name="adresse"
+              #adresse="ngModel">
+          </label>
+
+          <label>
+            <span>Code postal</span>
+            <input id="code_postal" type="number" pInputText [(ngModel)]="employeur.adresse.code_postal"
+              name="code_postal" #code_postal="ngModel" required>
+          </label>
+
+          <button id="signup_btn" type="button" pButton class="submit p-button-rounded p-button-text" (click)="signUp()"
+            [disabled]="nom.invalid || nom_ste.invalid || email.invalid || code.invalid || telephone.invalid || secteur_act.invalid
+            || pays.invalid || governat.invalid || ville.invalid || adresse.invalid || code_postal.invalid
+            || mdp.invalid || confirm_mdp.invalid">S'inscrire</button>
+
+        </p-scrollPanel>
+        <div class="spinner" style="margin-top: 30vh">
+          <div id="loader" style="display: none;">
+            <p-progressSpinner [style]="{width: '50px', height: '50px'}" styleClass="custom-spinner" strokeWidth="8"
+              fill="#EEEEEE" animationDuration=".5s"></p-progressSpinner>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<!-- 
+<div class="all">
   <h1 class="ctil">Ajouter Votre Société</h1>
   <form class="box">
     <div class="p-fluid p-formgrid p-grid ">
@@ -39,7 +271,7 @@
 
       <div class="p-field">
         <label for="logo">logo</label>
-          <input type="file" accept=".jpg,.png,.jpeg"
+          <input type="file" pInputText accept=".jpg,.png,.jpeg"
                  id="file"
                  (change)="handleFileInput($event.target.files)">
       </div>
@@ -61,13 +293,12 @@
         <input type="number" id="telephone" pInputText [(ngModel)]="employeur.telephone" name="telephone"
           #telephone="ngModel" required pTooltip="Le numero doit être composé de 8 chiffres" tooltipPosition="right"
           tooltipEvent="focus" showDelay="1000" hideDelay="500">
-        <!--<input id="telephone" type="number" pInputText min="71000000" [(ngModel)]="employeur.telephone" name="telephone" #telephone="ngModel" required pTooltip="Le numero doit être composé de 8 chiffres" tooltipPosition="right" tooltipEvent="focus" showDelay="1000" hideDelay="500">-->
       </div>
+
       <div class="p-field p-col-12 p-md-3">
         <label for="desc">Description Entreprise</label>
         <textarea id="desc" [rows]="3" [cols]="30" pInputTextarea autoResize="autoResize"
           [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required></textarea>
-        <!--<input id="desc" type="text" pInputText [(ngModel)]="employeur.description_entreprise" name="desc" #desc="ngModel" required>-->
       </div>
 
       <div class="p-field p-col-12 p-md-3">
@@ -80,11 +311,13 @@
         <input id="pays" type="text" rows="1" pInputText [(ngModel)]="employeur.adresse.pays" name="pays"
           #pays="ngModel" required>
       </div>
+
       <div class="p-field p-col-12 p-md-3">
         <label for="governat">Governat</label>
         <input id="governat" type="text" pInputText [(ngModel)]="employeur.adresse.governat" name="governat"
           #governat="ngModel" required>
       </div>
+
       <div class="p-field p-col-12 p-md-3">
         <label for="ville">Ville</label>
         <input id="ville" type="text" rows="1" pInputText [(ngModel)]="employeur.adresse.ville" name="ville"
@@ -106,4 +339,4 @@
   </form>
 
   <button class="big-button" (click)="ajouter()" [disabled]="nom.invalid">S'inscrire</button>
-</div>
+</div> -->
