--- a/src/app/pages/gestion-cv/gestion-personal-info/gestion-personal-info.component.css
+++ b/src/app/pages/gestion-cv/gestion-personal-info/gestion-personal-info.component.css
@@ -6,7 +6,7 @@
     white-space: pre-wrap
   }
   
-  .flex-cont {
+  .flex-container {
   
     display: flex;
     flex-wrap: wrap;
@@ -24,6 +24,11 @@
     background: rgba(255, 255, 255, 0.616);
     backdrop-filter: blur(10px);
   }
+
+  input {
+    border-radius: 25px;
+  }
+
   .input {
     padding: 5px 15px;
     margin: 5px;
@@ -36,7 +41,7 @@
     width: 30vw;
   }
   
-  .card-single {
+  .container {
     background: hsla(0, 0%, 100%, 0.800);
     backdrop-filter: blur(30px);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -48,12 +53,10 @@
   }
   
   .main {
-    background-image: url("../../../../assets/apps.46003.14259451864568504.ad5e5d07-0fbb-46ed-b9b6-a1b781645691.jpg");
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding: 2rem;
+    padding: 1rem 2rem;
     margin: 5px;
     border-radius: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   
   
@@ -185,11 +188,104 @@
     backdrop-filter: blur(80px);
   }
 
-  
+  .p-button-rounded:disabled {
+    border: 0px;
+    color: gray;
+    background-color: white;
+    box-shadow: none;
+  }
 
   
 /* NG PRIME STYLING*/
 
 :host ::ng-deep .p-dropdown,:host ::ng-deep  .p-dropdown-items-wrapper, .p-dropdown-items, .ng-tns-c72-1{
   border-radius: 25px;
+}
+.p-field{
+  margin: 2px;
+}
+
+/*  Loader  */
+:host ::ng-deep .custom-spinner .p-progress-spinner-circle {
+  
+  animation: custom-progress-spinner-dash 1.5s ease-in-out infinite, custom-progress-spinner-color 6s ease-in-out infinite;
+}
+
+@keyframes custom-progress-spinner-color {
+  100%,
+  0% {
+      stroke: #3c91ff;
+  }
+  40% {
+      stroke: #b9b9b9;
+  }
+  66% {
+      stroke: #02bee4;
+  }
+  80%,
+  90% {
+      stroke: #3c91ff;
+  }
+}
+
+@keyframes custom-progress-spinner-dash {
+  0% {
+      stroke-dasharray: 1, 200;
+      stroke-dashoffset: 0;
+  }
+  50% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -35px;
+  }
+  100% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -124px;
+  }
+}
+
+.spinner{
+  display:flex;
+  justify-content:space-around;
+  margin: 10px auto;
+}
+
+/* File upload styling*/
+.button-wrapper {
+  position: relative;
+  cursor: pointer;
+  width: 100%;
+  text-align: center;
+  margin: 0px auto;
+  padding: 0px;
+}
+
+.button-wrapper span.label {
+  position: relative;
+  z-index: 0;
+  display: inline-block;
+  width: 100%;
+  border-radius: 25px;
+  background: #0066ff;
+  font-weight: bold;
+  cursor: pointer;
+  color: #fff;
+  padding: 10px 0;
+  text-transform:uppercase;
+  font-size:12px;
+}
+
+#upload {
+    display: inline-block;
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    cursor: pointer;
+    padding: 0px;
+}
+.upload-box{
+  cursor: pointer;
+  padding: 0px;
 }
