--- a/src/app/pages/offres/offres.component.css
+++ b/src/app/pages/offres/offres.component.css
@@ -6,9 +6,6 @@
   white-space: pre-wrap
 }
 
-body{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 
 div{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -43,71 +40,76 @@ div{
 
 .main {
   /*  background-image: url("../../../assets/Hiring-Manager-Reviewing-Resume-During-Job-Interview.jpg");  */
+ 
   background-size: cover;
-  padding: 0px 2rem;
+  padding: 0px 20px;
   margin: 5px auto;
-  width: 70vw;
+  margin-left: 31vw;
+  /*margin-left: 30vw;*/
+  width: 64vw;
   border-radius: 20px;
+  
   }
 
 .flex-cont {
   display: flex;
   flex-wrap: wrap;
   margin: 0.5vw auto;
+  
   border-radius: 30px;
   flex-flow: column;
 }
 
+.bottom{
+  padding-bottom: 20px;
+}
+
 .responsive-body{
-  margin-top: 80px;
   text-align:justify;
   display: flex;
   justify-content:space-between;
 }
+
 @media (max-width:1051px) {
   .responsive-body{
   display: flex;
+  position: static;
   flex-direction: column;
   }
+
   .search {
-    height:100%;
-    min-width: 100%;
+    position: static !important;
+    width: 96% !important;
+    margin: 20px calc(1vw + 2%) !important;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-around;
   }
 
   :host ::ng-deep p-multiselect .p-multiselect-chip{
-    width: 43vw;
+    width: 40vw;
   }
 
   :host ::ng-deep p-chips .p-chips-multiple-container{
     width: 90vw;
   }
-
   .main {
+    
+    margin: auto ;
     width: 94vw;}
 }
 
-/* for entreprise image*/
-.column{
-    
-  display: flex;
-  flex-direction: column;
-  }
-
-
-
 .search {
+  position: fixed;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   background: rgba(32, 132, 247);
   color: white;
   font-weight: bold;
-  height:100%;
+  height:fit-content;
+  z-index: 2;
   padding: 0.5vw;
-  margin: 5px 0.5vw 5px 0vw;
+  margin: 40px 1vw 0px 1vw;
   width: 29vw;
   border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -121,22 +123,36 @@ div{
   padding: 20px 20px 10px 20px;
   margin: 1vw;
   border-radius: 30px;
+  animation: reveal ease-in 0.5s;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+@keyframes reveal {
+
+  0% {
+      opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
 .p-fluid label{
   padding: 5px 10px;
 }
 
 .paging-control {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  
+  border-radius: 30px;
+  flex-flow: column;
   background: rgba(255, 255, 255, 0.801);
   backdrop-filter: blur(10px);
   height: fit-content;
   width: fit-content;
-  margin: auto;
   border-radius: 40px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
@@ -167,7 +183,7 @@ div{
   backdrop-filter: blur(20px);
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 20; /* Sit on top */
   padding-top: 80px; /* Location of the box */
   left: 0;
   top: 0;
@@ -250,6 +266,12 @@ div{
   backdrop-filter: blur(80px);
 }
 
+/* for entreprise image*/
+.column{
+    
+  display: flex;
+  flex-direction: column;
+  }
 .right img{
   margin-left: 20px;
   border-radius: 15px;
@@ -270,12 +292,16 @@ div{
 :host ::ng-deep .p-component{
   border-radius: 20px;
 }
-:host ::ng-deep .p-dropdown, .p-dropdown-items-wrapper, .p-multiselect-chip, .p-multiselect , .p-multiselect-open ,  .p-dropdown-items{
+.p-multiselect-chip, .p-multiselect , .p-multiselect-open {
   border-radius: 25px;
   min-width: 12vw;
 }
 
-:host ::ng-deep p-multiselect .p-multiselect-chip, .p-multiselect , .p-multiselect-open , .ng-tns-c75-6, .p-dropdown-items{
+:host ::ng-deep .p-component{
+  border-radius: 25px;
+}
+
+:host ::ng-deep p-multiselect .p-multiselect-chip, .p-multiselect , .p-multiselect-open , .ng-tns-c75-6{
   border-radius: 25px;
   max-width: 96%;
   margin: 6px;
@@ -304,18 +330,71 @@ div{
   width: 100vw;
 }
 
-:host ::ng-deep .p-dropdown,:host ::ng-deep .p-component{
-  border-radius: 25px;
-}
-
 :host ::ng-deep p-multiselect .p-multiselect-chip, :host ::ng-deep p-multiselect .p-multiselect-item {
   border-radius: 25px;
 }
 
 :host ::ng-deep p-multiselect .p-multiselect-items-wrapper{
-  border-radius: 0px 0px 25px 25px;
+  border-radius: 0px 0px 20px 20px;
 }
 
 :host ::ng-deep p-multiselect .p-multiselect-header{
-  border-radius: 25px 25px 0px 0px;
+  border-radius: 20px 20px 0px 0px;
+}
+
+:host ::ng-deep .scroll{
+  width: 100%;
+  height: calc(100vh - 68px)
+}
+
+@media (max-width:1051px) {
+  :host ::ng-deep .scroll{
+    width: 100%;
+    height: calc(100vh - 68px)
+  }
+}
+
+/*  Loader  */
+:host ::ng-deep .custom-spinner .p-progress-spinner-circle {
+  
+  animation: custom-progress-spinner-dash 1.5s ease-in-out infinite, custom-progress-spinner-color 6s ease-in-out infinite;
+}
+
+@keyframes custom-progress-spinner-color {
+  100%,
+  0% {
+      stroke: #3c91ff;
+  }
+  40% {
+      stroke: #b9b9b9;
+  }
+  66% {
+      stroke: #02bee4;
+  }
+  80%,
+  90% {
+      stroke: #3c91ff;
+  }
+}
+
+@keyframes custom-progress-spinner-dash {
+  0% {
+      stroke-dasharray: 1, 200;
+      stroke-dashoffset: 0;
+  }
+  50% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -35px;
+  }
+  100% {
+      stroke-dasharray: 89, 200;
+      stroke-dashoffset: -124px;
+  }
+}
+
+.spinner{
+  display:flex;
+  justify-content:space-around;
+  margin: 10px auto;
+  animation: reveal ease-in 0.2s;
 }
