--- a/src/app/pages/table-des-societe/table-des-societe.component.scss
+++ b/src/app/pages/table-des-societe/table-des-societe.component.scss
@@ -71,6 +71,8 @@
     margin: 30px;
     padding: 2rem;
     border-radius: 30px;
+    
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
   .p-rounded{
